--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 DATABASE_URL=postgresql://postgres:password@localhost:5432/energy_trading
-GRIDSTATUS_API_KEY=719913dc864748b3905a87891042e481
+GRIDSTATUS_API_KEY=
 CORS_ORIGINS=http://localhost:5173
